Release dvp in mknod error branch.

Nicolas Joly, PR kern/41006